--- a/src/api/BoardScoreTable/BoardScoreTable.scss
+++ b/src/api/BoardScoreTable/BoardScoreTable.scss
@@ -4,6 +4,10 @@
 	margin: 20px 20px;
 	font-size: 20px;
 	line-height: 1;
+	background-color: var(--bg-color);
+	.screenshot-show {
+		display: none;
+	}
 	th {
 		font-weight: bold;
 		background-color: var(--primary-color);
@@ -13,6 +17,11 @@
 		input {
 			color: var(--bg-color);
 		}
+	}
+
+	.inverted {
+		background-color: var(--primary-color);
+		color: var(--bg-color);
 	}
 
 	th,
