--- a/src/index.scss
+++ b/src/index.scss
@@ -148,6 +148,17 @@ p {
 	padding-bottom: 100px;
 }
 
+.image-transparency-gradient {
+	-webkit-mask-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		from(rgba(0, 0, 0, 1)),
+		to(rgba(0, 0, 0, 0))
+	);
+	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
 @media screen and (max-width: 600px) {
 	.content {
 		max-width: 95%;
