--- a/src/api/BoardScoreTable/BoardScoreTable.scss
+++ b/src/api/BoardScoreTable/BoardScoreTable.scss
@@ -44,6 +44,7 @@
 		background-color: var(--secondary-color);
 		color: var(--primary-color);
 		font-weight: bold;
+text-align: center;
 	}
 	.win {
 		color: var(--secondary-color);
