--- a/src/api/GameMenu/GameMenu.scss
+++ b/src/api/GameMenu/GameMenu.scss
@@ -3,8 +3,9 @@
 	bottom: -50px;
 	background-color: var(--primary-color);
 	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 	padding-top: 50px;
 	padding-bottom: 70px;
 	right: -50px;
@@ -16,6 +17,7 @@
 	z-index: 10001;
 	max-width: 700px;
 	button {
+		width: 45%;
 		background-color: var(--bg-color);
 		color: var(--primary-color);
 		border: none;
