--- a/src/core/components/IconButton/IconButton.scss
+++ b/src/core/components/IconButton/IconButton.scss
@@ -1,2 +1,14 @@
 .icon-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
+	height: 50px;
+	.double-line {
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		justify-content: center;
+		font-size: 16px;
+	}
 }
