--- a/src/core/components/Notification/Notification.scss
+++ b/src/core/components/Notification/Notification.scss
@@ -8,7 +8,7 @@
 	top: 10px;
 	z-index: 100000;
 	border-radius: 5px;
-	padding: 10px 10px;
+	padding: 15px 15px;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 	color: var(--bg-color);
 	display: flex;
@@ -19,13 +19,33 @@
 	* {
 		margin: 0;
 	}
+	.level {
+		font-size: 40px;
+	}
+}
+
+.closing {
+	animation: slideToTop 0.5s ease-in-out;
 }
 
 @keyframes slideFromTop {
 	0% {
 		transform: translateY(-100%) translateX(-50%);
+		opacity: 0;
 	}
 	100% {
 		transform: translateY(0) translateX(-50%);
+		opacity: 1;
+	}
+}
+
+@keyframes slideToTop {
+	0% {
+		transform: translateY(0) translateX(-50%);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(-100%) translateX(-50%);
+		opacity: 0;
 	}
 }
