--- a/src/index.scss
+++ b/src/index.scss
@@ -79,6 +79,19 @@ p {
 	align-items: center;
 	justify-content: center;
 }
+.ver-start {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+}
+
+.hor {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
 
 .print-show {
 	display: none;
