--- a/src/components/GameSearch/GameSearch.scss
+++ b/src/components/GameSearch/GameSearch.scss
@@ -4,6 +4,8 @@
 		padding: 10px;
 		border-top-left-radius: 10px;
 		border-bottom-left-radius: 10px;
+		border-top-right-radius: 0px;
+		border-bottom-right-radius: 0px;
 		font-size: 20px;
 		background-color: var(--secondary-color);
 		color: var(--bg-color);
@@ -18,6 +20,8 @@
 		border: none;
 		border-top-right-radius: 10px;
 		border-bottom-right-radius: 10px;
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
 		background-color: var(--primary-color);
 		color: var(--font-color);
 		cursor: pointer;
