--- a/src/core/components/QuickGuidePopUp/QuickGuidePopUp.scss
+++ b/src/core/components/QuickGuidePopUp/QuickGuidePopUp.scss
@@ -1,7 +1,7 @@
 .quick-guide {
 	display: flex;
 	flex-direction: column;
-	align-items: start;
+	align-items: center;
 	justify-content: center;
 	.heading {
 		font-weight: bold;
@@ -12,8 +12,8 @@
 	ul {
 		padding: 0;
 		margin: 0;
-		width: 300px;
 		max-width: 90%;
+		margin-left: 20px;
 		li {
 			font-size: 20px;
 			text-align: left;
