Added padding for help row

--- a/src/core/main/BoardScoreTable/BoardScoreTable.scss
+++ b/src/core/main/BoardScoreTable/BoardScoreTable.scss
@@ -99,8 +99,9 @@ input[type='number'] {
 		}
 		.help-row {
 			td {
-				height: 20px;
+				height: 15px;
 				font-size: 14px;
+				padding: 7px 10px;
 			}
 		}
 	}
